--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>React-Project</title>
 </head>
 <body>
-
+ <h2>Hello React!</h2>
 </body>
 </html>
