created new index.js and working on header

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <title>React-Project</title>
 </head>
 <body>
- <h2>Hello React!</h2>
+<div id = 'root'></div>
+
+
+<script src="js/app.js"></script>
+
 </body>
 </html>
