--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>React-Project</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 <div id = 'root'></div>
